<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/c82" />

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@+id/view1"
        android:layout_centerHorizontal="true"
        android:background="@color/cab" />

    <Button
        android:id="@+id/button1"
        style="@style/ButtonBackBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="14dp"
        android:layout_marginRight="53dp"
        android:text="@string/button_accept" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="29dp"
        android:layout_marginTop="26dp"
        android:text="@string/input_text_choose"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/cff" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/maps_karnough"
            android:textColor="@color/cff" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_table"
            android:textColor="@color/cff" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logical_function"
            android:textColor="@color/cff" />

    </RadioGroup>

</RelativeLayout>